--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -31,10 +31,10 @@ hr {
   border-top: 1px solid white;
 }
 
-.fas.fa-temperature-low {
+.min {
   color: blue;
 }
 
-.fas.fa-temperature-high {
+.max {
   color: red;
 }
