--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -23,6 +23,7 @@ h1 {
 h2 {
   color: #fff;
   font-weight: 100;
+  font-size: 1.5em;
   text-transform: uppercase;
 }
 
@@ -38,3 +39,10 @@ hr {
 .max {
   color: red;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
