--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -51,17 +51,17 @@ h2 {
   text-align: left;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #fff;
+  padding-bottom: 20px;
 }
 
-/* .hourFormat, .hourlyTemp, .hourlyIcon, .hourlyCloudy, .hourlyPop, .hourlyRain {
- text-align: left;
- width: auto
-} */
-
-
-
-/* hr {
-  border: none;
-  border-top: 1px solid white;
+.active,
+.dropdown:hover {
+  cursor: pointer;
 }
- */
+
+.dropdown,
+.currentBody,
+.temperatureChart {
+  margin-top: 10px;
+}
